Pending changes in the mainline
===============================

* New functions from the SDK wrapped in Python:
  - orthanc.CreateDicom()
  - orthanc.FindQuery.GetFindQueryTagElement()
  - orthanc.FindQuery.GetFindQueryTagGroup()
  - orthanc.RegisterFindCallback()
  - orthanc.RegisterMoveCallback()
  - orthanc.RegisterWorklistCallback()
  - orthanc.WorklistAnswers.WorklistAddAnswer()


Version 3.1 (2021-01-22)
========================

* Fix possible deadlock with "orthanc.RegisterOnChangeCallback()"
* During Orthanc shutdown, wait for all the pending events to have been processed


Version 3.0 (2020-12-09)
========================

=> Minimum SDK version: 1.8.1 <=

* New Python function: "orthanc.RegisterIncomingHttpRequestFilter()"
* Support of Apple OS X
* Fix issue #185 (segfaults on non-UTF8 special characters in request URI)


Version 2.0 (2020-07-08)
========================

=> Minimum SDK version: 1.7.2 <=

* Wrapped more functions
* Fix compilation using Visual Studio
* The "Calling Python..." info logs are disabled if "PythonVerbose" is "false"
* New builders for Windows: Supporting 32 / 64bit with Python 2.7 / 3.7 / 3.8
* Support of dynamic linking against the system-wide Orthanc framework library


Version 1.0 (2020-04-01)
========================

=> Minimum SDK version: 1.5.7 <=

* Initial release