@@ -35,11 +35,11 @@ ROOT = os.path.dirname(os.path.realpath(sys.argv[0]))
 ## implemented (not autogenerated)
 ##
 
-CUSTOM_FUNCTIONS = {    
+CUSTOM_FUNCTIONS = set([
     'OrthancPluginCreateDicom',
+    'OrthancPluginCreateImageAccessor',                # Replaced by "orthanc.CreateImageFromBuffer()"
     'OrthancPluginFreeMemoryBuffer',
     'OrthancPluginFreeString',
-    'OrthancPluginGetFindQueryTag',
     'OrthancPluginRegisterFindCallback',
     'OrthancPluginRegisterIncomingHttpRequestFilter',  # Implemented through v2
     'OrthancPluginRegisterIncomingHttpRequestFilter2',
@@ -49,8 +49,7 @@ CUSTOM_FUNCTIONS = {
     'OrthancPluginRegisterRestCallback',               # Implemented using OrthancPlugins::RegisterRestCallback
     'OrthancPluginRegisterRestCallbackNoLock',         # Implemented using OrthancPlugins::RegisterRestCallback
     'OrthancPluginRegisterWorklistCallback',
-    'OrthancPluginWorklistAddAnswer',
-}
+])
 
 CUSTOM_METHODS = [
     {
@@ -71,7 +70,22 @@ CUSTOM_METHODS = [
         'implementation' : 'WorklistAddAnswer',
         'sdk_function' : 'OrthancPluginWorklistAddAnswer',
     },
+    {
+        'class_name' : 'OrthancPluginDicomInstance',
+        'method_name' : 'GetInstanceData',
+        'implementation' : 'GetInstanceData',
+        'sdk_function' : 'OrthancPluginGetInstanceData',
+    },    
+    {
+        'class_name' : 'OrthancPluginImage',
+        'method_name' : 'GetImageBuffer',
+        'implementation' : 'GetImageBuffer',
+        'sdk_function' : 'OrthancPluginGetImageBuffer',
+    },    
 ]
+
+for method in CUSTOM_METHODS:
+    CUSTOM_FUNCTIONS.add(method['sdk_function'])
 
 
 ##
@@ -393,7 +407,11 @@ for node in tu.cursor.get_children():
             countAllFunctions += 1
             args = args[1:]
 
-            if not IsSupportedTargetType(node.result_type):
+            if node.spelling in CUSTOM_FUNCTIONS:
+                print('Ignoring custom function that is manually implemented: %s()' % node.spelling)
+                countSupportedFunctions += 1                
+
+            elif not IsSupportedTargetType(node.result_type):
                 print('*** UNSUPPORTED OUTPUT: %s' % node.spelling)
             
             elif (len(args) == 1 and
@@ -457,10 +475,6 @@ for node in tu.cursor.get_children():
                 classes[className]['methods'].append(method)
                 countSupportedFunctions += 1
             
-            elif node.spelling in CUSTOM_FUNCTIONS:
-                print('Ignoring custom function that is manually implemented: %s()' % node.spelling)
-                countSupportedFunctions += 1                
-
             else:
                 print('*** UNSUPPORTED INPUT: %s' % node.spelling)
             
