@@ -3,8 +3,11 @@ Pending changes in the mainline
 
 * New functions from the SDK wrapped in Python:
   - orthanc.CreateDicom()
+  - orthanc.CreateImageFromBuffer()
+  - orthanc.DicomInstance.GetInstanceData()
   - orthanc.FindQuery.GetFindQueryTagElement()
   - orthanc.FindQuery.GetFindQueryTagGroup()
+  - orthanc.Image.GetImageBuffer()
   - orthanc.RegisterFindCallback()
   - orthanc.RegisterMoveCallback()
   - orthanc.RegisterWorklistCallback()
